Fix spacing for applet-box (top/bottom panel) (#193)
* Fix spacing for applet-box (top/bottom panel)

Fix spacing for applet-box of top/bottom panel.
See also: ac43b6fbed41dd0df427d0a4a48a49627334bfc0

* Fix spacing for applet-box

Fix/define spacing for applet-box.

--- a/Carta/files/Carta/cinnamon/cinnamon.css
+++ b/Carta/files/Carta/cinnamon/cinnamon.css
@@ -1860,6 +1860,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
     color: rgb(207, 216, 220);
     text-shadow: none;
     transition-duration: 100ms;
+    spacing: 3px;
 }
 
 .applet-box StLabel {
